--- a/server/package.json
+++ b/server/package.json
@@ -8,5 +8,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.8.8",
+    "sequelize-cli": "^5.5.0"
+  }
 }
