--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.8",
     "sequelize-cli": "^5.5.0"
