--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,8 @@
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.8",
     "sequelize-cli": "^5.5.0"
+  },
+  "devDependencies": {
+    "faker": "^4.1.0"
   }
 }
