--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "boom": "^7.3.0",
     "chalk": "^2.4.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.8",
     "sequelize-cli": "^5.5.0"
