--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
+    "node-mocks-http": "^1.7.6",
     "sequelize": "^5.8.8",
     "sequelize-cli": "^5.5.0"
   },
