--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.16",
     "@types/node": "12.6.9",
     "@types/react": "16.8.24",
     "@types/react-dom": "16.8.5",
@@ -13,13 +12,14 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "redux-thunk": "^2.3.0",
     "typescript": "3.5.3",
     "validator": "^11.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest test/src",
     "eject": "react-scripts eject",
     "lint": "eslint -c ./.eslintrc.json --fix 'src/**/*.{ts,tsx}'"
   },
@@ -50,18 +50,42 @@
   },
   "proxy": "http://localhost:3000",
   "devDependencies": {
+    "@types/jest": "^24.0.18",
     "@types/react-redux": "^7.1.1",
     "@types/react-router-dom": "^4.3.5",
+    "@types/redux-mock-store": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "@typescript-eslint/typescript-estree": "^1.13.0",
+    "axios-mock-adapter": "^1.17.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-import-resolver-node": "^0.3.2",
     "eslint-plugin-prettier": "^3.1.0",
     "husky": "^3.0.2",
+    "jest": "^24.9.0",
     "lint-staged": "^9.2.1",
     "pre-commit": "^1.2.2",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "redux-mock-store": "^1.5.3",
+    "ts-jest": "^24.1.0"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "tsconfig.json"
+      }
+    },
+    "testMatch": [
+      "**/*.spec.+(ts|tsx|js)"
+    ]
   }
 }
